[gd_scene load_steps=2 format=2]

[ext_resource path="res://script/Object/enemy/EnemyDetection.gd" type="Script" id=1]

[node name="EnemyDetection" type="Area2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0.360784, 0.396078, 0.882353, 1 )

[node name="Hate" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_EnemyDetection_body_exited"]
[connection signal="timeout" from="Hate" to="." method="_on_Hate_timeout"]
